force-app/main/default/objects/phsUserSurveyQuestions__c/phsUserSurveyQuestions__c.object-meta.xml
<CustomObject>
    <label>phsUserSurveyQuestions</label>
    <nameField>
        <label>phsUserSurveyQuestions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsUserSurveyQuestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>