force-app/main/default/objects/phsUserSurveyQuestions__c/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <label>Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>