force-app/main/default/objects/phsUserSurveyQuestions__c/fields/SurveyQuestionId__c.field-meta.xml
<CustomField>
    <fullName>SurveyQuestionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SurveyQuestionId</label>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipLabel>phsUserSurveyQuestions</relationshipLabel>
    <relationshipName>phsUserSurveyQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>