force-app/main/default/objects/phsUserSurveyQuestions__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>phsUserSurveyQuestions</relationshipLabel>
    <relationshipName>phsUserSurveyQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>