force-app/main/default/objects/phsUserSurveyQuestions__c/fields/UserAnswer__c.field-meta.xml
<CustomField>
    <fullName>UserAnswer__c</fullName>
    <label>UserAnswer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>